--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,11 @@ dependencies {
                         'com.codeborne:xls-test:1.3',
                         'com.opencsv:opencsv:5.6',
                         "org.slf4j:slf4j-simple:1.7.36",
-                         "org.assertj:assertj-core:3.23.1")
+                        "org.assertj:assertj-core:3.23.1",
+                        'com.fasterxml.jackson.core:jackson-core:2.13.3',
+                        'com.fasterxml.jackson.core:jackson-databind:2.13.3',
+                        'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
+    )
 
 
 }
